Updated links in footer

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -38,13 +38,13 @@
 %footer.footer
   .container
     %p
-      Designed and Created by &nbsp;
-      %a{:href => "http://www.inspiredpixel.net"} Peter Hamilton &nbsp;
+      Created out of frustration and &#9829; by
+      %a{:href => "http://pete-hamilton.co.uk"} Pete Hamilton &nbsp;
       %a{:href => "http://www.twitter.com/peterejhamilton"}
         %i.icon-twitter &nbsp;
-      %a{:href => "http://www.github.com/peterhamilton"}
+      %a{:href => "http://www.github.com/petehamilton"}
         %i.icon-github &nbsp;
     %p
       This journey 1% finished. Help lessen the pain - &nbsp;
-      %a{:href => "https://github.com/PeterHamilton/classy-cate"}
+      %a{:href => "https://github.com/petehamilton/classy-cate"}
         %i.icon-github-alt
