Better Spacing of icons

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -41,9 +41,11 @@
       Created out of frustration and &#9829; by
       %a{:href => "http://pete-hamilton.co.uk"} Pete Hamilton &nbsp;
       %a{:href => "http://www.twitter.com/peterejhamilton"}
-        %i.icon-twitter &nbsp;
+        %i.icon-twitter
+      &nbsp;
       %a{:href => "http://www.github.com/petehamilton"}
-        %i.icon-github &nbsp;
+        %i.icon-github
+      &nbsp;
     %p
       This journey 1% finished. Help lessen the pain - &nbsp;
       %a{:href => "https://github.com/petehamilton/classy-cate"}
