--- a/views/layout.haml
+++ b/views/layout.haml
@@ -47,6 +47,6 @@
         %i.icon-github
       &nbsp;
     %p
-      This journey 1% finished. Help lessen the pain - &nbsp;
+      This journey is 1% finished. Help lessen the pain - &nbsp;
       %a{:href => "https://github.com/petehamilton/classy-cate"}
         %i.icon-github-alt
