Dashboard Population refactored

--- a/views/classy-cate.coffee.erb
+++ b/views/classy-cate.coffee.erb
@@ -35,6 +35,7 @@ TIMELINE_STRUCTURE = {
 
 <%= File.read("views/populators/page_populator.coffee") %>
 <%= File.read("views/populators/layout_populator.coffee") %>
+<%= File.read("views/populators/dashboard_populator.coffee") %>
 
 <%= File.read("views/misc/page_loaders.coffee") %>
 
