--- a/views/classy-cate.coffee.erb
+++ b/views/classy-cate.coffee.erb
@@ -32,10 +32,12 @@ TIMELINE_STRUCTURE = {
 
 <%= File.read("views/page_scrapers/page_scraper.coffee") %>
 <%= File.read("views/page_scrapers/main_page_scraper.coffee") %>
+<%= File.read("views/page_scrapers/grades_page_scraper.coffee") %>
 
 <%= File.read("views/populators/page_populator.coffee") %>
 <%= File.read("views/populators/layout_populator.coffee") %>
 <%= File.read("views/populators/dashboard_populator.coffee") %>
+<%= File.read("views/populators/grades_populator.coffee") %>
 
 <%= File.read("views/misc/page_loaders.coffee") %>
 
